# pbs-cloud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  fix-loadbalancer.yaml
.github/workflows/: ci.yaml  release.yaml
charts/pbs-cloud/: Chart.yaml  values-local.yaml  values-s3.yaml  values.yaml
charts/pbs-cloud/files/: pbs_prune_gc.py
charts/pbs-cloud/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob-prune-gc.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/pbs-cli/: Cargo.toml
crates/pbs-cli/src/: main.rs
crates/pbs-core/: Cargo.toml
crates/pbs-core/src/: blob.rs  chunk.rs  crypto.rs  error.rs  index.rs  lib.rs  manifest.rs
crates/pbs-server/: Cargo.toml
crates/pbs-server/src/: api.rs  audit.rs  auth.rs  billing.rs  config.rs  lib.rs  main.rs  metrics.rs  persistence.rs  protocol.rs  rate_limit.rs  server.rs  session.rs  streaming.rs  system_info.rs  tasks.rs  tenant.rs  tls.rs  validation.rs  verify_jobs.rs
crates/pbs-storage/: Cargo.toml
crates/pbs-storage/src/: backend.rs  datastore.rs  error.rs  gc.rs  lib.rs  local.rs  s3.rs
docs/: durability.md
scripts/: ci.sh  pbs_client_smoke.sh  pbs_prune_gc.py  test.sh
