[workspace]
resolver = "2"
members = [
    "crates/pbs-core",
    "crates/pbs-storage",
    "crates/pbs-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["haasonsaas"]
repository = "https://github.com/haasonsaas/pbs-cloud"
description = "PBS-compatible backup server with S3 storage backend and multi-tenancy support"
keywords = ["backup", "proxmox", "pbs", "s3", "kubernetes"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP/2 server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
h2 = "0.4"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = "0.13"  # For generating self-signed certs

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto - matching PBS specs
aes-gcm = "0.10"
zstd = "0.13"
sha2 = "0.10"
crc32fast = "1.4"
rand = "0.8"
scrypt = "0.11"

# Storage backends
aws-sdk-s3 = "1.61"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }

# Rate limiting
governor = "0.7"

# Metrics
prometheus = "0.13"

# Validation
regex = "1.11"
lazy_static = "1.5"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
tempfile = "3.14"
parking_lot = "0.12"
dashmap = "6.1"
url = "2.5"

# Internal crates
pbs-core = { path = "crates/pbs-core" }
pbs-storage = { path = "crates/pbs-storage" }
