[package]
name = "pbs-server"
description = "PBS-compatible HTTP/2 backup server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pbs-cloud-server"
path = "src/main.rs"

[dependencies]
pbs-core = { workspace = true }
pbs-storage = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
h2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# TLS support
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Validation
regex = { workspace = true }
lazy_static = { workspace = true }

# Additional utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
